2006-04-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/airy.cpp, itpp/base/bessel/chbevl.cpp,
	itpp/base/bessel.cpp, itpp/base/bessel/hyperg.cpp,
	itpp/base/bessel/i0.cpp, itpp/base/bessel/i1.cpp,
	itpp/base/bessel/iv.cpp, itpp/base/bessel/jv.cpp,
	itpp/base/bessel/k0.cpp, itpp/base/bessel/k1.cpp,
	itpp/base/bessel/kn.cpp, itpp/base/bessel/polevl.cpp,
	itpp/base/bessel/struve.cpp: Fixed a problem with a few Bessel
	functions provided by <cmath> under MSVC++ (different naming
	conventions). BTW, file headers updated.

	* itpp/itbase.h: Minor fix - including `itmisc.h' file.

2006-03-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated IT++ Supported Systems page
	with new tests.

	* config/acx_fft.m4: Improvements and fixes in external FFT
	library detection.

	* config/acx_cblas.m4: Added check for acml.h header file when
	checking for ACML's CBLAS library. 

	* itpp/base/cblas.cpp, config/acx_cblas.m4, configure.ac,
	doc/doxygen_html.cfg.in, itpp/base/sources.mk: Fixed CBLAS
	interface when using ACML BLAS implementation. ACML C interface
	is not the same as in other implementation, so a limited set of
	wrapper functions has been created in `cblas.cpp' file.

2006-03-28  Adam Piatyszek  <ediap@users.sourceforge.net>

	* TODO: Updated to reflect recent changes.

	* itpp/base/itpp_version.cpp, itpp/base/itpp_version.h,
	itpp/itconfig.h, itpp/base/array.h, itpp/base/mat.h,
	itpp/base/newton_search.cpp, itpp/base/newton_search.h,
	itpp/base/sources.mk, itpp/base/vec.h, itpp/sources.mk: Merged the
	content of itpp/itconfig.h and itpp/base/itpp_version.{cpp,h}
	files into new files itpp/base/itmisc.{cpp,h}. The new files
	should include miscleaneous functions related to IT++ library.

2006-03-27  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp-config.in: Minor fix in the itpp-config
	script. Now `itpp-config --libs-debug' uses `-litpp' when the
	debug library is not available.
